# resound

./: README.md  dev.sh
docs/: resound-v1-spec.md  resound-v2-spec.md  resound-v3-spec.md
src/crate/: Cargo.toml
src/crate/kits/: 909.json  hip-hop.json
src/crate/src/: kit.rs  lib.rs  mixer.rs  pattern.rs  pool.rs  samples.rs  transport.rs
src/web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
src/web/src/: main.ts  styles.css
src/web/src/audio/: clock.ts  engine.ts  scheduler.ts  voices.ts
src/web/src/state/: undo.ts
src/web/src/ui/: bpm.ts  clearReset.ts  grid.ts  inspector.ts  kit.ts  mixer.ts  playhead.ts  sampleBrowser.ts  transport.ts
