[package]
name = "resound"
version = "0.1.0"
edition = "2021"
description = "Browser-based 8-voice step sequencer drum machine — Rust core"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
