[package]
name = "resound"
version = "0.2.0"
edition = "2021"
description = "Browser-based 8-voice step sequencer drum machine — Rust core"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
